# svmlight-loader

./: .coveragerc  README.rst  setup.cfg  tox.ini
.github/workflows/: ci.yml  coverage.yml  packaging.yml
docs/: conf.py  spelling-wordlist.txt
svmlight_loader/: __init__.py  _api.py  _sklearn.py
svmlight_loader/benchmarks/: __init__.py  scikit_learn.py
svmlight_loader/tests/: test_api.py  test_sklearn.py
