[metadata]
name = svmlight-loader
url = https://github.com/Julian/svmlight-loader
project_urls = 
    Source = https://github.com/Julian/svmlight-loader
    Issues = https://github.com/Julian/svmlight-loader/issues/
description = A Cython-less implementation of the svmlight / libsvm sparse data format
long_description = file: README.rst
author = Julian Berman
author_email = Julian+svmlight_loader@GrayVines.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires = setuptools_scm
install_requires =
    importlib_metadata; python_version < '3.8'
    numpy
    scipy

[flake8]
exclude = svmlight_loader/__init__.py
