[metadata]
name = svmlight-loader
url = https://github.com/Julian/svmlight-loader
project_urls = 
    Documentation = https://svmlight-loader.readthedocs.io/en/stable/
    Source = https://github.com/Julian/svmlight-loader
    Issues = https://github.com/Julian/svmlight-loader/issues/
description = A Cython-less implementation of the svmlight / libsvm sparse data format
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Julian Berman
author_email = Julian+svmlight_loader@GrayVines.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    importlib_metadata; python_version < '3.8'
    attrs
    numpy
    scipy<1.4; platform_python_implementation == 'PyPy'
    scipy>=1.4; platform_python_implementation != 'PyPy'

[flake8]
exclude = svmlight_loader/__init__.py
